# krombo

./: README.md  output.logs  output2.logs  output3.logs  output4.logs  pyproject.toml  report.md
src/krombo/: crew.py  main.py
src/krombo/config/: agents.yaml  tasks.yaml
