[project]
name = "krombo"
version = "0.1.0"
description = "krombo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
krombo = "krombo.main:run"
run_crew = "krombo.main:run"
train = "krombo.main:train"
replay = "krombo.main:replay"
test = "krombo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
